<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/game_activity_textview_question"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="2dp"
        android:layout_weight="1.7"
        android:background="@color/primaryColor"
        android:gravity="center"
        android:text="@string/what_did_you_eat"
        android:textColor="@color/primaryTextColor"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/game_activity_textview_question2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="2dp"
        android:layout_weight="1"
        android:background="@color/secondaryColor"
        android:gravity="center"
        android:textColor="@color/secondaryTextColor"
        android:textSize="18sp"
        android:textStyle="normal"
        android:text="@string/when" />



        <RadioGroup android:id="@+id/game_activity_radio_group_when"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_width="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/game_activity_button_meal1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:layout_weight="2"
                    android:background="@color/primaryColor"
                    android:button="@null"
                    android:gravity="center"
                    android:padding="16dp"
                    android:text="@string/breakfast"
                    android:textSize="11sp"
                    tools:ignore="NestedWeights" />

                <RadioButton
                    android:id="@+id/game_activity_button_meal2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:layout_weight="2"
                    android:padding="16dp"
                    android:textSize="11sp"
                    android:button="@null"
                    android:background="@color/primaryColor"
                    android:text="@string/lunch"
                    android:gravity="center"/>

                <RadioButton
                    android:id="@+id/game_activity_button_meal3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:layout_weight="2"
                    android:padding="16dp"
                    android:textSize="11sp"
                    android:button="@null"
                    android:background="@color/primaryColor"
                    android:text="@string/dinner"
                    android:gravity="center"/>

                <RadioButton
                    android:id="@+id/game_activity_button_meal4"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:layout_weight="2"
                    android:padding="16dp"
                    android:textSize="11sp"
                    android:button="@null"
                    android:background="@color/primaryColor"
                    android:text="@string/snack"
                    android:gravity="center"/>

            </LinearLayout>

        </RadioGroup>


    <TextView
        android:id="@+id/game_activity_textview_question3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="2dp"
        android:layout_weight="1"
        android:background="@color/secondaryColor"
        android:gravity="center"
        android:textColor="@color/secondaryTextColor"
        android:textSize="18sp"
        android:textStyle="normal"
        android:text="@string/what" />

    <EditText
        android:id="@+id/main_edittext_what"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/please_enter_the_name_of_your_meal"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        android:autofillHints="Meal"
        android:inputType="textAutoCorrect" />

    <TextView
        android:id="@+id/game_activity_textview_question4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="2dp"
        android:layout_weight="1"
        android:background="@color/secondaryColor"
        android:gravity="center"
        android:textColor="@color/secondaryTextColor"
        android:textSize="18sp"
        android:textStyle="normal"
        android:text="@string/how_many_calories" />

    <EditText
        android:id="@+id/main_edittext_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/please_enter_the_number_of_calories"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        android:autofillHints="0"
        android:inputType="number"/>


    <Button
        android:id="@+id/game_activity_button_4"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="8dp"
        android:layout_weight="0.77"
        android:padding="16dp"
        android:textSize="20sp"
        android:text="@string/next" />
</LinearLayout>
