<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".controller.MainActivity">



    <TextView
        android:id="@+id/main_textview_greeting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/hello_what_is_your_name"
        android:layout_margin="16dp"
        android:padding="8dp"
        />

    <EditText
        android:id="@+id/main_edittext_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/please_type_your_name"
        android:autofillHints="Username"
        android:inputType="textAutoCorrect"
        />

    <Button
        android:id="@+id/main_button_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="16dp"
        android:text="@string/go_next" />

</LinearLayout>